# laydown

./: Cargo.toml  Changelog.md  LICENSE  README.md
.github/workflows/: ci.yml  github-ci.yml  release.yml  rust.yml
src/: data_file.rs  lib.rs  main.rs  standup.rs
tests/: cli.rs  integration_tests.rs
tests/expected/: blocker_item.txt  blocker_items.txt  did_doing_item.txt  did_item.txt  did_items.txt  doing_item.txt  doing_items.txt  empty_standup.txt  serialized_standup.txt  sidebar_item.txt  sidebar_items.txt
