[package]
name = "laydown"
version = "2.6.3"
edition = "2021"
authors = ["badjr13"]
license = "MIT"
description = "Always know what you're going to say at Daily Standup."
readme = "README.md"
repository = "https://github.com/badjr13/laydown"
keywords = ["cli", "standup", "agile", "scrum", "kanban"]
categories = ["command-line-utilities"]

[dependencies]
chrono = "0.4"
clap = "4"
dirs = "4"
ron = "0.7"
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
assert_cmd = "2"
